# helloworld

./: .gitignore  CLAIMS_VERIFICATION.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INVESTOR_REPORT_HELLOWORLD_V2.md  LICENSE  README.md  SECURITY.md  STEALTH_10_10_COMPLETE.md  STEALTH_TUNNEL_ARCHITECTURE.md  TODO_IMPLEMENTATION.md  config.example.json  report.md  requirements.txt  server_troubleshoot.sh  setup_gcp_firewall.ps1
.github/workflows/: build-macos.yml
binaries/: .gitignore  BUILD_MACOS.md  CHANGELOG.md  README.md
binaries/macos/: BUILD_INSTRUCTIONS.md  README_BUILD.txt
binaries/scripts/: install_server.sh
clean/: HELLOWORLD_SECURITY_REPORT_JANUARY_2026.md  README.md
clean/scripts/: install_server.sh
client/: CMakeLists.txt
client/include/: helloworld.h  keyschedule.h  observability.h  security.h  testing.h
client/src/: config.c  core.c  gui_macos.m  gui_win32.c  gui_win32.cpp  helloworld.rc  network.c  security.c  stealth.c  stealth_active.c  tunnel.c
docs/: GCP_FIREWALL_SETUP.md  RELEASES.md  SETUP_SERVER.md  SETUP_SERVER_GOOGLE_CLOUD.md  THREAT_MODEL.md
scripts/: build_macos.sh  build_macos_binary.sh  build_windows.bat  check_vm_status.sh  cleanup_source_auto.ps1  cleanup_source_code.ps1  cloud-init.yaml  create_shortcut.ps1  fix_gcp_firewall.sh  fix_stunnel_config.sh  install_server.sh  installer_win.nsi  prepare_binaries_only_repo.ps1  prepare_binaries_release.sh  prepare_release.ps1  update_from_git.sh  verify_setup.sh
server/: CMakeLists.txt
server/include/: hwserver.h
server/src/: installer_tui.c  main.c  server.c
v2tor/: README.md  SECURITY_REPORT_V2_TOR.md
v2tor/scripts/: install_server_tor.sh
website/: cloud-init.yaml  index.html
website/static/css/: style.css
website/static/js/: main.js
